--- a/app/src/main/res/drawable-v31/app_icon_launch_screen.xml
+++ b/app/src/main/res/drawable-v31/app_icon_launch_screen.xml
@@ -1,13 +1,35 @@
-<!-- 112 dp icon on a 288dp canvas -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="288dp"
     android:height="288dp"
-    android:viewportWidth="288"
-    android:viewportHeight="288">
+    android:viewportWidth="240"
+    android:viewportHeight="240">
+    <!-- 田地 (Field/Farmland) -->
     <path
-        android:pathData="M200,192.89C200,194.75 199.26,196.53 197.95,197.84C196.64,199.15 194.86,199.89 193,199.89H95C93.14,199.89 91.36,199.15 90.05,197.84C88.74,196.53 88,194.75 88,192.89V150.89C88,147.04 90.23,141.66 92.95,138.94L139.05,92.84C141.77,90.12 146.23,90.12 148.95,92.84L195.05,138.94C197.77,141.66 200,147.04 200,150.89V192.89L200,192.89Z"
-        android:fillColor="#18BCF2"/>
+        android:pathData="M0,160c40,-40 80,-40 120,0s80,40 120,0v80L0,240L0,160z"
+        android:fillColor="#88C057"/>
+
+    <!-- 陽光 (Sun) -->
     <path
-        android:pathData="M138.06,199.89L119.1,180.93C118.1,181.27 117.06,181.45 116,181.46C110.73,181.46 106.43,177.16 106.43,171.89C106.43,166.61 110.73,162.32 116,162.32C121.27,162.32 125.57,166.61 125.57,171.89C125.57,172.94 125.39,173.99 125.04,174.99L139.8,189.75V135.68C136.63,134.12 134.43,130.86 134.43,127.09C134.43,121.82 138.73,117.53 144,117.53C149.27,117.53 153.57,121.82 153.57,127.09C153.57,130.86 151.37,134.12 148.2,135.68V173.6L162.88,158.92C162.59,157.99 162.43,157.01 162.43,156.03C162.43,150.76 166.73,146.46 172,146.46C177.27,146.46 181.57,150.75 181.57,156.03C181.57,161.3 177.27,165.6 172,165.6C170.87,165.59 169.75,165.39 168.69,164.99L148.2,185.48V199.89L138.06,199.89Z"
-        android:fillColor="#F2F4F9"/>
+        android:pathData="M190,50m-25,0a25,25 0,1 1,50 0a25,25 0,1 1,-50 0"
+        android:fillColor="#FFD93B"/>
+    <path
+        android:pathData="M190,10L190,0M190,90L190,100M160,50L150,50M220,50L230,50M170,20L160,10M210,80L220,90M210,20L220,10M170,80L160,90"
+        android:strokeWidth="4"
+        android:fillColor="#00000000"
+        android:strokeColor="#FFD93B"/>
+
+    <!-- 嫩芽主莖 (Plant Stem) -->
+    <path
+        android:pathData="M120,140c-10,-30 0,-50 10,-50s20,20 10,50c-5,15 -15,15 -20,0z"
+        android:fillColor="#4CAF50"/>
+
+    <!-- 左葉 (Left Leaf) -->
+    <path
+        android:pathData="M115,125c-10,-10 -25,-10 -35,-5 5,15 20,20 35,20v-15z"
+        android:fillColor="#66BB6A"/>
+
+    <!-- 右葉 (Right Leaf) -->
+    <path
+        android:pathData="M125,125c10,-10 25,-10 35,-5 -5,15 -20,20 -35,20v-15z"
+        android:fillColor="#66BB6A"/>
 </vector>
