--- a/app/src/main/res/drawable/ic_launcher_foreground_round.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground_round.xml
@@ -1,4 +1,32 @@
-<vector android:height="108dp" android:viewportHeight="432"
-    android:viewportWidth="432" android:width="108dp" xmlns:android="http://schemas.android.com/apk/res/android">
-  <path android:fillColor="#F2F2F2" android:pathData="M296.22,190.31L223.78,117.87C219.51,113.6 212.5,113.6 208.23,117.87L135.78,190.31C131.51,194.59 128,203.04 128,209.09V275.09C128,281.14 132.95,286.09 139,286.09H206.66L176.87,256.3C175.34,256.83 173.7,257.13 172,257.13C163.71,257.13 156.97,250.38 156.97,242.09C156.97,233.81 163.71,227.06 172,227.06C180.29,227.06 187.03,233.81 187.03,242.09C187.03,243.8 186.73,245.44 186.21,246.97L209.4,270.16V185.19C204.41,182.74 200.97,177.62 200.97,171.7C200.97,163.41 207.71,156.67 216,156.67C224.29,156.67 231.03,163.41 231.03,171.7C231.03,177.62 227.59,182.74 222.6,185.19V244.78L245.67,221.71C245.22,220.28 244.97,218.75 244.97,217.17C244.97,208.88 251.71,202.13 260,202.13C268.29,202.13 275.03,208.88 275.03,217.17C275.03,225.45 268.29,232.2 260,232.2C258.17,232.2 256.42,231.85 254.8,231.25L222.6,263.45V286.1H293C299.05,286.1 304,281.15 304,275.1V209.1C304,203.05 300.5,194.6 296.22,190.32V190.31Z"/>
+<vector android:height="108dp" android:viewportHeight="240"
+    android:viewportWidth="240" android:width="108dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- 田地 (Field/Farmland) -->
+    <path
+        android:pathData="M0,160c40,-40 80,-40 120,0s80,40 120,0v80L0,240L0,160z"
+        android:fillColor="#F2F2F2"/>
+
+    <!-- 陽光 (Sun) -->
+    <path
+        android:pathData="M190,50m-25,0a25,25 0,1 1,50 0a25,25 0,1 1,-50 0"
+        android:fillColor="#F2F2F2"/>
+    <path
+        android:pathData="M190,10L190,0M190,90L190,100M160,50L150,50M220,50L230,50M170,20L160,10M210,80L220,90M210,20L220,10M170,80L160,90"
+        android:strokeWidth="4"
+        android:fillColor="#00000000"
+        android:strokeColor="#F2F2F2"/>
+
+    <!-- 嫩芽主莖 (Plant Stem) -->
+    <path
+        android:pathData="M120,140c-10,-30 0,-50 10,-50s20,20 10,50c-5,15 -15,15 -20,0z"
+        android:fillColor="#F2F2F2"/>
+
+    <!-- 左葉 (Left Leaf) -->
+    <path
+        android:pathData="M115,125c-10,-10 -25,-10 -35,-5 5,15 20,20 35,20v-15z"
+        android:fillColor="#F2F2F2"/>
+
+    <!-- 右葉 (Right Leaf) -->
+    <path
+        android:pathData="M125,125c10,-10 25,-10 35,-5 -5,15 -20,20 -35,20v-15z"
+        android:fillColor="#F2F2F2"/>
 </vector>
