--- a/app/src/main/res/drawable/ic_launcher_monochrome.xml
+++ b/app/src/main/res/drawable/ic_launcher_monochrome.xml
@@ -1,4 +1,32 @@
-<vector android:height="108dp" android:viewportHeight="432"
-    android:viewportWidth="432" android:width="108dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FFFFFF" android:pathData="M296.22,200.98L223.78,128.54C219.51,124.26 212.5,124.26 208.23,128.54L135.78,200.98C131.51,205.25 128,213.71 128,219.76V285.76C128,291.81 132.95,296.76 139,296.76H206.66L176.87,266.96C175.34,267.49 173.7,267.79 172,267.79C163.71,267.79 156.97,261.05 156.97,252.76C156.97,244.47 163.71,237.73 172,237.73C180.29,237.73 187.03,244.47 187.03,252.76C187.03,254.47 186.73,256.1 186.21,257.64L209.4,280.83V195.85C204.41,193.4 200.97,188.29 200.97,182.37C200.97,174.08 207.71,167.33 216,167.33C224.29,167.33 231.03,174.08 231.03,182.37C231.03,188.29 227.59,193.4 222.6,195.85V255.45L245.67,232.38C245.22,230.94 244.97,229.42 244.97,227.83C244.97,219.55 251.71,212.8 260,212.8C268.29,212.8 275.03,219.55 275.03,227.83C275.03,236.12 268.29,242.87 260,242.87C258.17,242.87 256.42,242.52 254.8,241.92L222.6,274.12V296.77H293C299.05,296.77 304,291.82 304,285.77V219.77C304,213.72 300.5,205.27 296.22,200.99V200.98Z"/>
+<vector android:height="108dp" android:viewportHeight="240"
+    android:viewportWidth="240" android:width="108dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- 田地 (Field/Farmland) -->
+    <path
+        android:pathData="M0,160c40,-40 80,-40 120,0s80,40 120,0v80L0,240L0,160z"
+        android:fillColor="#F2F2F2"/>
+
+    <!-- 陽光 (Sun) -->
+    <path
+        android:pathData="M190,50m-25,0a25,25 0,1 1,50 0a25,25 0,1 1,-50 0"
+        android:fillColor="#F2F2F2"/>
+    <path
+        android:pathData="M190,10L190,0M190,90L190,100M160,50L150,50M220,50L230,50M170,20L160,10M210,80L220,90M210,20L220,10M170,80L160,90"
+        android:strokeWidth="4"
+        android:fillColor="#00000000"
+        android:strokeColor="#F2F2F2"/>
+
+    <!-- 嫩芽主莖 (Plant Stem) -->
+    <path
+        android:pathData="M120,140c-10,-30 0,-50 10,-50s20,20 10,50c-5,15 -15,15 -20,0z"
+        android:fillColor="#F2F2F2"/>
+
+    <!-- 左葉 (Left Leaf) -->
+    <path
+        android:pathData="M115,125c-10,-10 -25,-10 -35,-5 5,15 20,20 35,20v-15z"
+        android:fillColor="#F2F2F2"/>
+
+    <!-- 右葉 (Right Leaf) -->
+    <path
+        android:pathData="M125,125c10,-10 25,-10 35,-5 -5,15 -20,20 -35,20v-15z"
+        android:fillColor="#F2F2F2"/>
 </vector>
